<resources>
    <string name="app_name">B07Project</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up">Sign - Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginView">Login</string>
    <string name="continue_as">Continue As:</string>
    <string name="student_button">Student</string>
    <string name="admin_button">Admin</string>
    <string name="sign_up_button">Sign Up?</string>
    <string name="dont_have_an_account">Dont Have An Account?</string>
    <string name="next">Next</string>
    <string name="back_button">Back</string>
    <string name="select">Select</string>
    <string name="or">Or</string>
    <string name="registration_page">Registration Page</string>
    <string name="email_registration">Email</string>
    <string name="password_registration">Password</string>
    <string name="register_registration">Register</string>
    <string name="add_course">Add Course</string>
    <string name="course_name">Course Name</string>
    <string name="prerequisites">Prerequisites</string>
    <string name="offering_sessions">Offering Sessions</string>
    <string name="add">Add</string>
    <string name="edit_course">edit course</string>
    <string name="Display_taken_course_title">Taken Course</string>
    <string name="Display_taken_course_title_button_add">Add</string>
    <string name="Display_taken_course_title_button_del">Delete</string>
    <string name="Display_taken_course_title_button_back">Back</string>
    <string name="confirm1">Confirm</string>
    <string name="back_course_button">Back</string>
    <string name="edit_courses_button">Edit</string>
    <string name="delete">Delete</string>
    <string name="admin_homepage">Admin Homepage</string>
    <string name="Add_courses_button">Button</string>
    <string name="add_courses">Add Courses</string>
    <string name="edit_courses">Edit Courses</string>
    <string name="delete_courses">Delete Courses</string>
    <string name="Back_button_edit_courses">Back</string>
    <string name="avalialbe_courses">Avalialbe Courses</string>
    <string name="click_to_edit_or_delete_a_course">Click To Edit or Delete A Course</string>
    <string name="click_to_add_prerequisites">Click To Add Prerequisites</string>
    <string name="click_to_add_offerings">Click To Add Offerings</string>
    <string name="done">Done</string>
    <string name="course_code">Course Code</string>
    <string name="admin_home">Admin Home</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
</resources>