<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin_or_student">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="256dp"
        android:layout_height="59dp"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.1"
        android:text="@string/select"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#673AB7"
        android:textSize="45sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <Button
        android:id="@+id/Student"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#673AB7"
        android:letterSpacing="0.1"
        android:text="@string/student_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.478" />

    <Button
        android:id="@+id/Admin"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="228dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#673AB7"
        android:letterSpacing="0.1"
        android:text="@string/admin_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="37dp"
        android:layout_height="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Student" />
</androidx.constraintlayout.widget.ConstraintLayout>