<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayTakenCourseActivity">

    <TextView
        android:id="@+id/dtc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Display_taken_course_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <ListView
        android:layout_width="321dp"
        android:layout_height="369dp"
        android:id="@+id/takencrslist_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dtc_title"
        app:layout_constraintTop_toBottomOf="@+id/dtc_title"
        android:background="@drawable/background_list_view"
        app:layout_constraintVertical_bias="0.057" />

    <Button
        android:id="@+id/tcbuttonAdd"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:text="@string/Display_taken_course_title_button_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takencrslist_view"
        app:layout_constraintVertical_bias="0.525" />

    <Button
        android:id="@+id/tcbuttonBack"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:text="@string/Display_taken_course_title_button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takencrslist_view"
        app:layout_constraintVertical_bias="0.525" />


</androidx.constraintlayout.widget.ConstraintLayout>